--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=15MB
 #spring.servlet.multipart.max-request-size=15MB
 
+#spring.security.user.name=toshko
+#spring.security.user.password=123
+
 server.port=8080
