--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,13 @@
             <artifactId>angularjs</artifactId>
             <version>1.3.15</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.cloudinary/cloudinary -->
+        <dependency>
+            <groupId>com.cloudinary</groupId>
+            <artifactId>cloudinary</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
 
     </dependencies>
 
