--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,9 +11,9 @@ spring.jpa.properties.hibernate.format_sql=TRUE
 spring.jpa.hibernate.ddl-auto=update
 #File Upload Properties
 spring.servlet.multipart.max-file-size=15MB
+spring.resources.static-locations[0]=file:src/main/resources/static/
+spring.resources.static-locations[1]=classpath:/static/
 #spring.servlet.multipart.max-request-size=15MB
 
-#spring.security.user.name=toshko
-#spring.security.user.password=123
 
 server.port=8080
